fix(label): stop bleeding css in storybook

--- a/packages/components/src/label/Label.module.css
+++ b/packages/components/src/label/Label.module.css
@@ -1,7 +1,8 @@
 @value tokens: "../theme/tokens.css";
 @value black, display from tokens;
 
-label {
+.normal,
+.bold {
   color: black;
   font-family: display;
 }
